--- a/lab2/style.css
+++ b/lab2/style.css
@@ -64,3 +64,62 @@ nav li:active {
     background-image: none;
     box-shadow: inset 0 3px 3px rgba(0, 0, 0, .2);
 }
+
+video {
+    /* add your style definitions here */
+    border: 10px solid #666;
+    padding: 9px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    border-radius: 10px;
+
+    /* transitions applied to the video element */
+    -moz-transition: all 1s ease-in-out;
+    -webkit-transition: all 1s ease-in-out;
+    -o-transition: all 1s ease-in-out;
+    -ms-transition: all 1s ease-in-out;
+    transition: all 1s ease-in-out;
+}
+
+audio {
+    /* add your style definitions here */
+    border: 10px solid #666;
+    padding: 9px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    border-radius: 10px;
+}
+
+button.back{
+    /*These lines override the previous styling of buttons*/
+   -webkit-border-image: url("greyButton.png") 0 14 0 14 stretch;
+   width:60px;
+   height: 30px;
+    
+   /*These lines position the back button inside the header*/
+   position:absolute;
+   left:16px;
+   top:8px; 
+}
+
+header.secondary{   
+    padding-left: 75px;
+    font-family: Tahoma, Geneva, sans-serif;
+    font-weight: bold condensed;
+    color:  #AC2B37; 
+    font-size: 50px;
+}
+
+button {
+    /*center the button*/
+   display: block;
+   margin-left: auto;
+   margin-right: auto;
+    
+   /* add your code to set top and bottom margins */
+    
+   /*add an image to your button*/
+   -webkit-border-image: url("orangeButton.png") 0 14 0 14 stretch;
+    
+   /*set width and height for the button*/
+   }
